# jaxmetal

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_matmul.py
cmake/: EmbedMetal.cmake  embed_one.cmake
docs/: ARCHITECTURE.md  PJRT_PLUGIN.md
examples/: backends_and_batching.py  ffi_jit.py  jit_ffi.py  matmul_showcase.py  resident_speed.py  train_mnist.py
include/jaxmetal/capi/: metal_capi.h
include/jaxmetal/cpu/: cpu_matmul.h
include/jaxmetal/metal/: dtype.h  kernel_library.h  metal_buffer.h  metal_context.h
include/jaxmetal/ops/: elementwise.h  matmul.h  mlp.h  mps_matmul.h  nn.h
include/jaxmetal/runtime/: dispatcher.h
kernels/: elementwise.metal  matmul.metal  nn.metal
python/: README.md
python/jaxmetal/: __init__.py  _capi.py  data.py  ffi.py  reference.py
python/jaxmetal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/jaxmetal/plugin/: __init__.py
src/capi/: metal_capi.mm
src/cpu/: cpu_matmul.cpp
src/ffi/: metal_ffi.cpp
src/metal/: kernel_library.mm  metal_buffer.mm  metal_context.mm
src/ops/: elementwise.mm  matmul.mm  mlp.mm  mps_matmul.mm  nn.mm
src/runtime/: dispatcher.mm
tests/cpp/: cpu_matmul_test.cpp  elementwise_test.cpp  gpu_test_util.cpp  gpu_test_util.h  matmul_test.cpp  mlp_test.cpp  mps_matmul_test.cpp  nn_test.cpp  runtime_test.cpp  test_framework.cpp  test_framework.h
tests/python/: test_frontend.py  test_mlp_gate.py
tools/: arith_demo.mm
